# les-etl-pipeline

./: .gitignore  LES_dag_assets.py  LES_dag_bond_info.py  LES_dag_deal_detail.py  Makefile  README.md  SME_dag.py  SME_dag_amortisation.py  SME_dag_assets.py  SME_dag_bond_info.py  SME_dag_collaterals.py  SME_dag_deal_detail.py  SME_dag_dev.py  dag.py  etl.cfg  main_etl.py  out.sh  pyproject.toml  requirements.txt
dags/: LES_dag_assets.py  LES_dag_bond_info.py  LES_dag_deal_detail.py
dependencies/: bronze_profiling_rules.json
deployment/: main.tf
elt_scripts/: generate_amortisation_bronze.py  generate_asset_bronze.py  generate_bond_info_bronze.py
etl_scripts/: generate_amortisation_bronze.py  generate_amortisation_silver.py  generate_asset_bronze.py  generate_asset_silver.py  generate_bond_info_bronze.py  generate_bond_info_silver.py  generate_collateral_bronze.py  generate_collateral_silver.py  generate_deal_details_bronze.py
experiments/: amortisation_data_experiments.ipynb  asset_data_experiments.ipynb  bond_info_data_experiments.ipynb  clean_up_batches.py  collateral_data_experiments.ipynb  loan_data_explore.ipynb  macro_econo_experiments.ipynb  main_etl.ipynb  main_etl_bronze.ipynb  main_etl_gold.ipynb  main_etl_silver.ipynb  plot_experiments.ipynb  scan_logs_batches.py  test.ipynb  test_data_quality.ipynb  test_scd2_delta_bronze.ipynb
scripts_drafts/: generate_amortisation_bronze.py  generate_asset_silver.py  generate_collateral_bronze.py  generate_collateral_silver.py  generate_deal_details_bronze.py  profile_asset_bronze.py  run_bronze_profiling.py
src/: les_main.py  main.py
tests/: test_bronze_funcs.py  (+1 more)
(+45 files in other folders)
