[tool.poetry]
name = "loan_etl_pipeline"
version = "0.1.0"
description = ""
authors = ["francesco.gastaldello <francesco.gastaldello@docebo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-storage = "^2.6.0"
delta-spark = "1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
