[tool.poetry]
name = "loan_etl_pipeline"
version = "0.1.0"
description = ""
authors = ["francesco.gastaldello <francesco.gastaldello@algoritmica.ai>"]
exclude = ["src/main*.py"]
packages = [
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-storage = "^2.6.0"
delta-spark = "2.1.0"
Cerberus = "^1.3.4"
google-cloud-bigquery = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
